crates/mako/src/snapshots/mako__tree_shaking__tests__tree_shaking_dynamic_import-2.snap
---
source: crates/mako/src/tree_shaking.rs
expression: content
---
globalThis.jsonpCallback([
    [
        'a.ts'
    ],
    {
        "a.css": function(module, exports, require) {},
        "a.ts": function(module, exports, require) {
            "use strict";
            Object.defineProperty(exports, "__esModule", {
                value: true
            });
            require("a.css");
        }
    }
]);

//# sourceMappingURL=a_ts-async.js.map
